# gb-emu

./: .gitignore  Cargo.toml  README.md
src/: emulator.rs  main.rs
src/emulator/: address_bus.rs  cartridge.rs  cpu.rs  dbg.rs  dma.rs  gamepad.rs  io.rs  lcd.rs  memory.rs  ppu.rs  ram.rs  timer.rs  ui.rs
src/emulator/cpu/: instruction.rs  interrupts.rs
src/emulator/ppu/: fifo.rs
