[package]
name = "gb-emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0"
log = "0.4"
log4rs = "1.0"
lazy_static = "1.4"
phf = { version = "0.11.2", features = ["macros"] }
strum = "0.25"
strum_macros = "0.25"
enum-map = "2.7.3"